fix: hide overflow on mobile menu to stop buttons pertaining after close on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@
 
 .mobile-menu {
   max-width: 0;
+  overflow: hidden;
 }
 
 .mobile-menu.open {
